hphp/test/slow/collection_classes/frozen_set/immutability2.php.expectf

Fatal error: Call to undefined method HH\ImmSet::add() in %s/slow/collection_classes/frozen_set/immutability2.php on line 7
